⚔️ Mastery 5 - Major refactoring and crum setup